<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonChooseDark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose_dark_theme"
            android:textColor="@color/viewTextColorLight"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonChooseLight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose_light_theme"
            android:textColor="@color/viewTextColorDark"/>
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button" />

</LinearLayout>