<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calc_background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/calcView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center|end"
        android:text="@string/calcView"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="bottom|center|end"
        android:text="@string/resultView"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAC"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="#65000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_ac"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="#00000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDel"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#65000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textColor="#FFFFFF"
            app:cornerRadius="0dp"
            app:icon="@android:drawable/ic_input_delete"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="30dp"
            app:iconTint="#FFFFFF"
            app:strokeColor="#00000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEquals"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#65000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_equals"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            app:strokeColor="#00000000"
            app:strokeWidth="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#4D05183C"
            android:fadeScrollbars="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_1"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="#80000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#4D05183C"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_2"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="#80000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#4D05183C"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_3"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="#80000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlus"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#65000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_plus"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            app:strokeColor="#00000000"
            app:strokeWidth="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#4D05183C"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_4"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="#80000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#4D05183C"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_5"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="#80000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#4D05183C"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_6"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="#80000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMinus"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#65000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_minus"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            app:strokeColor="#00000000"
            app:strokeWidth="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#4D05183C"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_7"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="#80000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#4D05183C"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_8"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="#80000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#4D05183C"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_9"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="#80000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMultiply"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#65000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_multiply"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            app:strokeColor="#00000000"
            app:strokeWidth="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPercent"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#65000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_percent"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            app:strokeColor="#00000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#4D05183C"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_0"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="#80000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPoint"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#65000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_point"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            app:strokeColor="#00000000"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDivide"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#65000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_divide"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            app:strokeColor="#00000000"
            app:strokeWidth="2dp" />
    </LinearLayout>

</LinearLayout>